--- a/index.html
+++ b/index.html
@@ -1,63 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Alexander Winston - Personal Website</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexander Winston - Personal Website</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <header>
+      <h1>Alexander Winston</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-<body>
-  <header>
-    <h1>Alexander Winston</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Welcome to my personal website. I am a continuous thinker, innovator,
+        and man of my word.
+      </p>
+    </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Welcome to my personal website. I am a passionate individual...</p>
-  </section>
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+      <div class="project">
+        <h3>Project 1</h3>
+        <p>Description of Project 1...</p>
+      </div>
+      <div class="project">
+        <h3>Project 2</h3>
+        <p>Description of Project 2...</p>
+      </div>
+	  <div class="project">
+        <h3>Project 3</h3>
+        <p>Description of Project 3...</p>
+      </div>
+      <!-- Add more projects here -->
+    </section>
 
-  <section id="portfolio">
-    <h2>Portfolio</h2>
-    <div class="project">
-      <img src="project1.jpg" alt="Project 1">
-      <h3>Project 1</h3>
-      <p>Description of Project 1...</p>
-    </div>
-    <div class="project">
-      <img src="project2.jpg" alt="Project 2">
-      <h3>Project 2</h3>
-      <p>Description of Project 2...</p>
-    </div>
-    <!-- Add more projects here -->
-  </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <form id="contact-form">
+        <label for="name">Name</label>
+        <input type="text" id="name" required />
+        <label for="email">Email</label>
+        <input type="email" id="email" required />
+        <label for="message">Message</label>
+        <textarea id="message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <form id="contact-form">
-      <label for="name">Name</label>
-      <input type="text" id="name" required>
-      <label for="email">Email</label>
-      <input type="email" id="email" required>
-      <label for="message">Message</label>
-      <textarea id="message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+    <footer>
+      <p>&copy; 2023 Alexander Winston. All rights reserved.</p>
+    </footer>
 
-  <footer>
-    <p>&copy; 2023 Your Name. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
