--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
       <p>&copy; 2023 Alexander Winston. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
